--- a/src/main/resources/t163.properties
+++ b/src/main/resources/t163.properties
@@ -1,3 +1,3 @@
-t163.appKey=459045738
-t163.appSecret=dc2f4e140098a34961a668494ffb96b4
-t163.redirectUri=http://gotour.sinaapp.com/wb/access_token
+t163.appKey=PQzPx9GMZl2M4G1p
+t163.appSecret=c7mLFR6va4DHAD5B3F2P9ZEVk8zaLuDU
+t163.redirectUri=http://outdoor.sinaapp.com/t163/access_token
